# patchbay-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
data/discovery/: profile-trusted-repositories.toml  trusted-overlay-repositories.toml
docs/: agent-safe-preparation-runtime.md  execpolicy.md  issue-finder-rust-design.md  safe-probes.md  sandbox.md  skills.md  usage.md
docs/recommendation-evals/: README.md
docs/specs/: patchbay-cli-rust-design.md
src/: AGENTS.md  agent_policy.rs  cli.rs  competition.rs  config.rs  context_pack.rs  discovery.rs  doctor.rs  errors.rs  evidence_pack.rs  github.rs  github_budget.rs  github_enrichment.rs  handoff.rs  inbox.rs  lib.rs  llm.rs  llm_review.rs  main.rs  paths.rs  prepare_events.rs  prepare_gate.rs  probe.rs  readiness.rs  repo_scan.rs  report.rs  scoring.rs  tool_context.rs  tool_outputs.rs  tool_runtime.rs  tool_specs.rs  value_gates.rs  value_model.rs  value_scores.rs  value_scoring.rs  value_signals.rs  workflow.rs  workspace.rs
src/recommendation/: candidate_ranker.rs  competition_completion.rs  engine.rs  eval.rs  events.rs  feed_ranker.rs  feedback.rs  freshness.rs  mod.rs  model.rs  quality_policy.rs  (+1 more)
tests/: AGENTS.md  concurrent_enrichment.rs  enrichment_cache.rs  eval_cli.rs  github_mock.rs  github_value_mock.rs  local_state.rs  recommendation_eval.rs  recommendation_feed.rs  recommendation_quality.rs  repo_scoped_recommendation.rs  tools_contract.rs  value_assessment_scenarios.rs  workspace_daily.rs
(+59 files in other folders)
